Bug fixes concerning the reservation. Spinner is now visible again. Fixed an error from the refactoring.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -73,11 +73,13 @@ footer .container .credit p:first-child {
 /*
     Reservation
  */
+#spinner {
+    display: none;
+}
 #spinner img {
     height : 50px;
     position : relative;
     top : -8px;
-    display : none;
 }
 
 /*
